--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 }
 
 .stButton>button, .stDownloadButton>button {
-    background-color: #e4002b !important;
+    background-color: #a0011e !important;
     color: white !important;
     font-weight: 600 !important;
     border-radius: 5px !important;
